--- a/Guia17Ej09.html
+++ b/Guia17Ej09.html
@@ -3,18 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guia17Ej01</title>
+    <title>Document</title>
 </head>
 <body>
-
-    <h1>Ejercicio 1</h1>
-
-    <p><b> Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Doloribus libero error fugit voluptatum totam obcaecati quibusdam, repellat, sit dolor amet quas facilis ipsum itaque natus <br> repellendus accusamus consequatur minima odit.</b></p>
-
-    <h2>Parrafo 2</h2>
-
-    <i> Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Optio modi labore vero tenetur reiciendis voluptas distinctio commodi et culpa nihil, voluptates unde sunt atque magni. <br> Hic optio quo repudiandae accusamus?</i>
-
     
 </body>
 </html>
