--- a/Guia17Ej07.html
+++ b/Guia17Ej07.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body></body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Guia17ej07.css">
+    <title>Guia17Ej01</title>
+</head>
+<body>
+
+    <h1>Ejercicio 1</h1>
+
+    <p> Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Doloribus libero error fugit voluptatum totam obcaecati quibusdam, repellat, sit dolor amet quas facilis ipsum itaque natus <br> repellendus accusamus consequatur minima odit.</p>
+
+    <h2>Parrafo 2</h2>
+
+    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Optio modi labore vero tenetur reiciendis voluptas distinctio commodi et culpa nihil, voluptates unde sunt atque magni. <br> Hic optio quo repudiandae accusamus?</p>
+
+    
+</body>
 </html>
