--- a/Guia17Ej08.html
+++ b/Guia17Ej08.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="spa">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="Guia17Ej08.css">
+    <title>Ejercicio 8</title>
 </head>
 <body>
+    <h1>Enlaces</h1>
+
+    <a href="https://google.com" target="_blank">Ir a google</a>
+    <br>
+    <a href="https://instagram.com" target="_blank">Ir a instagram</a>
+    <br>
+    <a href="https://facebook.com" target="_blank">Ir a facebook</a>
+    <br>    
     
 </body>
 </html>
