--- a/Guia17Ej10.html
+++ b/Guia17Ej10.html
@@ -4,8 +4,34 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+
+	<!-- <style>
+		 body{
+			 background: #544a7d;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #ffd452, #544a7d);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #ffd452, #544a7d); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+;
+		} 
+
+		
+	</style>
+-->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
+
+	<h3>
+		Titulo principal
+		<small class="text-muted">Modificado con bootstrap</small>
+	  </h3>
+	<p class="shadow-lg p-3 mb-5 bg-white rounded">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita aperiam culpa, consectetur perspiciatis nisi numquam libero et impedit repellendus commodi.</p>
+	<h2 class="display-5">titulo secundario</h2>
+	<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate nostrum quod officiis!</p>
 	
+
+
+
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
