--- a/Guia17Ej12.html
+++ b/Guia17Ej12.html
@@ -3,9 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tabla</title>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
 </head>
 <body>
+
+    <table class="table table-hover">
+        <thead>
+          <tr>
+            <th scope="col">Nombre</th>
+            <th scope="col">Precio</th>
+            <th scope="col">Detalle</th>
+
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Producto1</td>
+            <td>10000</td>
+            <td><a href="http://www.google.com.ar" target="_blank"><button class="btn btn-primary" type="submit">Ver Producto</button></a></td>
+          </tr>
+          <tr>
+            <td>Producto1</td>
+            <td>10000</td>
+            <td><button class="btn btn-primary" type="submit">Ver Producto</button></td>
+          </tr>
+          <tr>
+            <td>Producto1</td>
+            <td>10000</td>
+            <td><button class="btn btn-primary" type="submit">Ver Producto</button></td>
+          </tr>          
+        </tbody>
+      </table>
     
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
