--- a/Guia17Ej13.html
+++ b/Guia17Ej13.html
@@ -1,11 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+
+    <!-- Bootstrap-->
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+    crossorigin="anonymous"
+    />
+
+        <!--Custom CSS-->
+    <link rel="stylesheet" href="Guia17Ej13.css">
 </head>
 <body>
-    
-</body>
+    <!--
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">    
+        <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ms-auto">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">Pricing</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+    -->
+
+    <div class="container my-3">
+      <div class="row">
+        <div class="col_sm12 col-md-4 col-lg-4 col-xl-4 py-4 bg-white">
+            <h2>Formulario de Registro</h2>
+            <form>
+
+                <div class="mb-3">
+                    <label for="nombre" class="form-label">Email</label>
+                    <input type="mail" class="form-control" id="nombre" placeholder="Ingrese su mail">
+                  </div>
+
+                  <div class="mb-3">
+                    <label for="descripcion" class="form-label">Contraseña</label>
+                    <input type="password" class="form-control" id="descripcion" placeholder="Ingrese su contraseña" ></input>
+                  </div>
+
+                  <div class="mb-3">
+                  <input type="checkbox"> Recuerdame </nput>
+                </div>
+                  
+                <div class="gap-sm-3">
+                    <button class="btn btn-success">Registrar</button>
+                </div>
+            </form>
+        </div>
+
+        <!--
+        <div class=".col-sm-12 col-md-8 col-lg-8 col-xl-8 py-4 bg-white">
+          <h2>Listado de lenguajes</h2>
+          <table class="table table-dark table-striped">
+            <thead>
+              <tr>
+                <th class="centrado">#</th>
+                <th class="centrado">Lenguaje</th>
+                <th class="centrado">Cantidad de programadores</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="centrado">1</td>
+                <td class="centrado">JavaScript</td>
+                <td class="centrado">21</td>
+              </tr>
+              <tr>
+                <td class="centrado">2</td>
+                <td class="centrado">Python</td>
+                <td class="centrado">110</td>
+              </tr>
+              <tr>
+                <td class="centrado">3</td>
+                <td class="centrado">C#</td>
+                <td class="centrado">45</td>
+              </tr>
+              <tr>
+                <td class="centrado">4</td>
+                <td class="centrado">Ruby</td>
+                <td class="centrado">31</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    -->
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
