--- a/Guia17Ex02.html
+++ b/Guia17Ex02.html
@@ -3,10 +3,11 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>Ejercicio formatear tabla</title>
+<link rel="stylesheet" href="Guia17Ex02.css">
 </head>
-
 <body>
-<table border="1" summary="Tipos de cambio">
+<table class="tabla" summary="Tipos de cambio">
+	<thead>
 	<tr>
 		<th scope="col">Cambio</th>
 		<th scope="col">Compra</th>
@@ -14,35 +15,37 @@
 		<th scope="col">M&aacute;ximo</th>
 		<th scope="col">M&iacute;nimo</th>
 	</tr>
+</thead>
+<tbody>
 	<tr>
-		<th scope="row">Euro/Dolar</th>
+		<th scope="row"><img src="assets/imagenes/euro.png" alt="">Euro/Dolar</th>
 		<td>1.2524</td>
 		<td>1.2527</td>
 		<td>1.2539</td>
 		<td>1.2488</td>
 	</tr>
 	<tr>
-		<th scope="row">Dolar/Yen</th>
+		<th scope="row"><img src="assets/imagenes/dolar.png" alt="">Dolar/Yen</th>
 		<td>119.01</td>
 		<td>119.05</td>
 		<td>119.82</td>
 		<td>119.82</td>
 	</tr>
 	<tr>
-		<th scope="row">Libra/Dolar</th>
+		<th scope="row"><img src="assets/imagenes/libra.png" alt="">Libra/Dolar</th>
 		<td>1.8606</td>
 		<td>1.8611</td>
 		<td>1.8651</td>
 		<td>1.8522</td>
 	</tr>
 	<tr>
-		<th scope="row">Euro/Yen</th>
+		<th scope="row"><img src="assets/imagenes/yen.png" alt="">Euro/Yen</th>
 		<td>149.09</td>
 		<td>149.13</td>
 		<td>149.79</td>
 		<td>148.96</td>
-	</tr>
+	</tr>	
+</tbody>
 </table>
-
 </body>
 </html>
