--- a/Guia17Ex01.html
+++ b/Guia17Ex01.html
@@ -6,6 +6,23 @@
     <title>Document</title>
 </head>
 <body>
+
+    <h2>Lista desordenada</h2>
+    <ul type="square">
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+    </ul>
+
+    <h2>Lista ordenada</h2>
+
+    <ol type="circle">
+        <li><a href="http://www.google.com.ar" target="_blank">Ir a Google</a></li>
+        <li><a href="http://www.Facebook.com.ar" target="_blank">Ir a Facebook</a></li>
+        <li><a href="http://www.Instagram.com" target="_blank">Ir a Instagram</a></li>
+    </ol>
+    
     
 </body>
 </html>
