--- a/Guia17Ej12.html
+++ b/Guia17Ej12.html
@@ -1,45 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tabla</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
-</head>
-<body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Ej Extra 3</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ms-auto">
+            <a class="nav-link" href="../EjerciciosEgg/Guia17Ex03.html">Home</a>
+            <a class="nav-link" href="../EjerciciosEgg/Guia17Ej12.html">Tablas</a>
+            <a class="nav-link" href="../EjerciciosEgg/Guia17Ej13.html">Registro</a>
+          </div>
+        </div>
+      </div>
+    </nav>
 
     <table class="table table-hover">
-        <thead>
-          <tr>
-            <th scope="col">Nombre</th>
-            <th scope="col">Precio</th>
-            <th scope="col">Detalle</th>
+      <thead>
+        <tr>
+          <th scope="col">Nombre</th>
+          <th scope="col">Precio</th>
+          <th scope="col">Detalle</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Producto1</td>
+          <td>10000</td>
+          <td>
+            <a href="http://www.google.com.ar" target="_blank"
+              ><button class="btn btn-primary" type="submit">
+                Ver Producto
+              </button></a
+            >
+          </td>
+        </tr>
+        <tr>
+          <td>Pearl Decade</td>
+          <td>10000</td>
+          <td>
+            <a href="Extra3/producto.html"><button class="btn btn-primary" type="button">Ver Producto</button></a>
+          </td>
+        </tr>
+        <tr>
+          <td>Producto1</td>
+          <td>10000</td>
+          <td>
+            <button class="btn btn-primary" type="submit">Ver Producto</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
 
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Producto1</td>
-            <td>10000</td>
-            <td><a href="http://www.google.com.ar" target="_blank"><button class="btn btn-primary" type="submit">Ver Producto</button></a></td>
-          </tr>
-          <tr>
-            <td>Producto1</td>
-            <td>10000</td>
-            <td><button class="btn btn-primary" type="submit">Ver Producto</button></td>
-          </tr>
-          <tr>
-            <td>Producto1</td>
-            <td>10000</td>
-            <td><button class="btn btn-primary" type="submit">Ver Producto</button></td>
-          </tr>          
-        </tbody>
-      </table>
-    
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  </body>
 </html>
