--- a/Guia17Ej13.html
+++ b/Guia17Ej13.html
@@ -6,50 +6,44 @@
         <title>Document</title>
 
     <!-- Bootstrap-->
-    <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-    crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
         <!--Custom CSS-->
     <link rel="stylesheet" href="Guia17Ej13.css">
 </head>
 <body>
-    <!--
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">    
-        <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ms-auto">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Pricing</a>
-          </div>
+      <div class="container-fluid">
+      <a class="navbar-brand" href="#">Ej Extra 3</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav ms-auto">
+          <a class="nav-link" href="Guia17Ex03.html">Home</a>
+          <a class="nav-link active" aria-current="page" href="#">Tablas</a>
+          <a class="nav-link active" aria-current="Registro" href="#">Registro</a>
         </div>
       </div>
-    </nav>
-    -->
+    </div>
+  </nav>
+
 
     <div class="container my-3">
       <div class="row">
         <div class="col_sm12 col-md-4 col-lg-4 col-xl-4 py-4 bg-white">
             <h2>Formulario de Registro</h2>
+            
             <form>
-
                 <div class="mb-3">
                     <label for="nombre" class="form-label">Email</label>
                     <input type="mail" class="form-control" id="nombre" placeholder="Ingrese su mail">
@@ -70,49 +64,7 @@
             </form>
         </div>
 
-        <!--
-        <div class=".col-sm-12 col-md-8 col-lg-8 col-xl-8 py-4 bg-white">
-          <h2>Listado de lenguajes</h2>
-          <table class="table table-dark table-striped">
-            <thead>
-              <tr>
-                <th class="centrado">#</th>
-                <th class="centrado">Lenguaje</th>
-                <th class="centrado">Cantidad de programadores</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td class="centrado">1</td>
-                <td class="centrado">JavaScript</td>
-                <td class="centrado">21</td>
-              </tr>
-              <tr>
-                <td class="centrado">2</td>
-                <td class="centrado">Python</td>
-                <td class="centrado">110</td>
-              </tr>
-              <tr>
-                <td class="centrado">3</td>
-                <td class="centrado">C#</td>
-                <td class="centrado">45</td>
-              </tr>
-              <tr>
-                <td class="centrado">4</td>
-                <td class="centrado">Ruby</td>
-                <td class="centrado">31</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-    -->
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
