--- a/Guia17Ex03.html
+++ b/Guia17Ex03.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="Guia17Ex03.css">
 
     
 </head>
@@ -33,10 +35,40 @@
         </div>
       </div>
     </nav>
+  <!--
+  <img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/2019_Ford_Mustang_GT_Blue.jpg"class="img-fluid" alt="Responsive image">
+-->
+
+<div class="contenedor">
+
+    <div class="caja col-sm-12 col-md-4 col-lg-4 col-xl-2">
+      <h3>Producto 1</h3>
+      <img src="https://tiendafeedback.com.ar/14546-large_default/bateria-pearl-roadshow-5-cuerpos-fierros-platillos-bombo-ciego-bronze-metallic.jpg" class="img-thumbnail imagen" alt="Imagen de producto">
+      <p>Descripcion del producto</p>
+      <a class="btn btn-primary" href="Extra3/producto.html" role="button">Ver producto</a>
+    </div>
+    <div class="caja col-sm-12 col-md-4 col-lg-4 col-xl-2">
+      <h3>Producto 2</h3>
+      <img src="https://tiendafeedback.com.ar/14546-large_default/bateria-pearl-roadshow-5-cuerpos-fierros-platillos-bombo-ciego-bronze-metallic.jpg" class="img-thumbnail imagen" alt="Imagen de producto">
+      <p>Descripcion del producto</p>
+      <a class="btn btn-primary" href="Extra3/producto.html" role="button">Ver producto</a>
+    </div>
+    <div class="caja col-sm-12 col-md-4 col-lg-4 col-xl-2">
+      <h3>Producto 3</h3>
+      <img src="https://tiendafeedback.com.ar/14546-large_default/bateria-pearl-roadshow-5-cuerpos-fierros-platillos-bombo-ciego-bronze-metallic.jpg" class="img-thumbnail imagen" alt="Imagen de producto">
+      <p>Descripcion del producto</p>
+      <a class="btn btn-primary" href="Extra3/producto.html" role="button">Ver producto</a>
+    </div>
+    <div class="caja col-sm-12 col-md-4 col-lg-4 col-xl-2">
+      <h3>Producto 4</h3>
+      <img src="https://tiendafeedback.com.ar/14546-large_default/bateria-pearl-roadshow-5-cuerpos-fierros-platillos-bombo-ciego-bronze-metallic.jpg" class="img-thumbnail imagen" alt="Imagen de producto">
+      <p>Descripcion del producto</p>
+      <a class="btn btn-primary" href="Extra3/producto.html" role="button">Ver producto</a>
+    </div>
+
     
 
-
-
+  </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
