--- a/Guia17Ex03.html
+++ b/Guia17Ex03.html
@@ -40,6 +40,30 @@
 -->
 
 <div class="contenedor">
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://tiendafeedback.com.ar/14546-large_default/bateria-pearl-roadshow-5-cuerpos-fierros-platillos-bombo-ciego-bronze-metallic.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://tiendafeedback.com.ar/14546-large_default/bateria-pearl-roadshow-5-cuerpos-fierros-platillos-bombo-ciego-bronze-metallic.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://tiendafeedback.com.ar/14546-large_default/bateria-pearl-roadshow-5-cuerpos-fierros-platillos-bombo-ciego-bronze-metallic.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Anterior</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Siguiente</span>
+  </button>
+</div>
+</div>
+
+<div class="contenedor">
 
     <div class="caja col-sm-12 col-md-4 col-lg-4 col-xl-2">
       <h3>Producto 1</h3>
