--- a/Guia18Ej04/index.html
+++ b/Guia18Ej04/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     
-
+    4. Realiza un programa que sólo permita introducir los caracteres ‘S’ y ‘N’. Si el usuario
+    ingresa alguno de esos dos caracteres se deberá de imprimir un mensaje por pantalla
+    que diga “CORRECTO”, en caso contrario, se deberá imprimir “INCORRECTO”.
 
     <script src="script.js" type="text/javascript"></script>
 </body>
