--- a/Guia18Ej06/index.html
+++ b/Guia18Ej06/index.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
 
+    6. Realizar un programa que, dado un número entero, visualice en pantalla si es par o impar.
+En caso de que el valor ingresado sea 0, se debe mostrar “el número no es par ni impar”.
 
     <script src="script.js" type="text/javascript"></script>
 </body>
