--- a/Guia18Ej03/index.html
+++ b/Guia18Ej03/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     
-
+    3. Escriba un programa en donde se pida la edad del usuario. Si el usuario es mayor de
+    edad se debe mostrar un mensaje indicándolo.
 
     <script src="script.js" type="text/javascript"></script>
 </body>
