--- a/Guia18Ej09/index.html
+++ b/Guia18Ej09/index.html
@@ -8,6 +8,9 @@
 <body>
     
 
+    9. Realizar un programa que pida una frase y el programa deberá mostrar la frase con un
+espacio entre cada letra. La frase se mostrara así: H o l a. Nota: recordar el
+funcionamiento de la función Substring().
 
     <script src="script.js" type="text/javascript"></script>
 </body>
