--- a/Guia18Ej07/index.html
+++ b/Guia18Ej07/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     
+    7. Escriba un programa en el cual se ingrese un valor límite positivo, y a continuación
+solicite números al usuario hasta que la suma de los números introducidos supere el
+límite inicial.
 
 
     <script src="script.js" type="text/javascript"></script>
