--- a/Guia18Ej08/index.html
+++ b/Guia18Ej08/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     
+    8. Escribir un programa que lea números enteros hasta teclear 0 (cero). Al finalizar el
+programa se debe mostrar el máximo número ingresado, el mínimo, y el promedio de
+todos ellos.
 
 
     <script src="script.js" type="text/javascript"></script>
