--- a/Guia18Ej11/index.html
+++ b/Guia18Ej11/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     
-
+    11. Escribir una función que reciba un String y devuelva la palabra más larga.
+String Ejemplo: “Guia de JavaScript”
+Resultado esperado : “JavaScript”
 
     <script src="script.js" type="text/javascript"></script>
 </body>
