--- a/Guia18Ej22/index.html
+++ b/Guia18Ej22/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     
-    13. Crear un objeto persona, con las propiedades nombre, edad, sexo ('H' hombre, 'M' mujer,
-'O' otro), peso y altura. A continuación, muestre las propiedades del objeto JavaScript.
+
+    22. Escribir un programa de JavaScript que al clickear un botón muestre un mensaje a
+elección.
 
     <script src="script.js" type="text/javascript"></script>
 </body>
