--- a/Guia18Ej23/index.html
+++ b/Guia18Ej23/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     
-    13. Crear un objeto persona, con las propiedades nombre, edad, sexo ('H' hombre, 'M' mujer,
-'O' otro), peso y altura. A continuación, muestre las propiedades del objeto JavaScript.
+    23. Resalte todas las palabras de más de 8 caracteres en el texto del párrafo (con un fondo
+amarillo, por ejemplo)
+
 
     <script src="script.js" type="text/javascript"></script>
 </body>
