--- a/Guia18Ej24/index.html
+++ b/Guia18Ej24/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     
-    13. Crear un objeto persona, con las propiedades nombre, edad, sexo ('H' hombre, 'M' mujer,
-'O' otro), peso y altura. A continuación, muestre las propiedades del objeto JavaScript.
+    24. Escribir un programa de JavaScript que a través de un formulario calcule el radio de un
+circulo y lo muestre en el HTML.
+
 
     <script src="script.js" type="text/javascript"></script>
 </body>
