--- a/Guia18Ej10/index.html
+++ b/Guia18Ej10/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-
+    10. Escribir una función flecha que reciba una palabra y la devuelva al revés.
 
     <script src="script.js" type="text/javascript"></script>
 </body>
