--- a/Guia18Ej12/index.html
+++ b/Guia18Ej12/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     
-
+    12. Escribir una función flecha de JavaScript que reciba un argumento y retorne el tipo de
+dato.
 
     <script src="script.js" type="text/javascript"></script>
 </body>
