--- a/Guia18Ej14/index.html
+++ b/Guia18Ej14/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     
-
+    14. Crear un objeto libro que contenga las siguientes propiedades: ISBN, Título, Autor,
+Número de páginas. Crear un método para cargar un libro pidiendo los datos al usuario
+y luego informar mediante otro método el número de ISBN, el título, el autor del libro y el
+numero de páginas.tura. A continuación, muestre las propiedades del objeto JavaScript.
 
     <script src="script.js" type="text/javascript"></script>
 </body>
