--- a/Guia18Ej15/index.html
+++ b/Guia18Ej15/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     
-
+    15. Escribe un programa JavaScript para calcular el área y el perímetro de un objeto Círculo
+con la propiedad radio. Nota: Cree dos métodos para calcular el área y el perímetro. El
+radio del círculo lo proporcionará el usuario.
 
     <script src="script.js" type="text/javascript"></script>
 </body>
