--- a/Guia18Ej16/index.html
+++ b/Guia18Ej16/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     
-    13. Crear un objeto persona, con las propiedades nombre, edad, sexo ('H' hombre, 'M' mujer,
-'O' otro), peso y altura. A continuación, muestre las propiedades del objeto JavaScript.
+    16. Realizar un programa que rellene dos vectores al mismo tiempo, con 5 valores aleatorios
+y los muestre por pantalla.
 
     <script src="script.js" type="text/javascript"></script>
 </body>
