--- a/Guia18Ej17/index.html
+++ b/Guia18Ej17/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     
-    13. Crear un objeto persona, con las propiedades nombre, edad, sexo ('H' hombre, 'M' mujer,
-'O' otro), peso y altura. A continuación, muestre las propiedades del objeto JavaScript.
+    17. Realizar un programa que elimine los dos últimos elementos de un array. Mostrar el
+resultado
 
     <script src="script.js" type="text/javascript"></script>
 </body>
