--- a/Guia18Ej20/index.html
+++ b/Guia18Ej20/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     
-    13. Crear un objeto persona, con las propiedades nombre, edad, sexo ('H' hombre, 'M' mujer,
-'O' otro), peso y altura. A continuación, muestre las propiedades del objeto JavaScript.
+    20. Realizar un programa que obtenga la siguiente matriz [[3], [6], [9], [12], [15]] y devuelve y
+muestre el siguiente array [6, 9, 12, 15, 18].
 
     <script src="script.js" type="text/javascript"></script>
 </body>
