--- a/Guia18Ej21/index.html
+++ b/Guia18Ej21/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     
-    13. Crear un objeto persona, con las propiedades nombre, edad, sexo ('H' hombre, 'M' mujer,
-'O' otro), peso y altura. A continuación, muestre las propiedades del objeto JavaScript.
+    21. Escribir un programa para obtener un array de las propiedades de un objeto Persona.
+Las propiedades son nombre, edad, sexo ('H' hombre, 'M' mujer, 'O' otro), peso y altura.
 
     <script src="script.js" type="text/javascript"></script>
 </body>
