--- a/Guia18Ej22/index.html
+++ b/Guia18Ej22/index.html
@@ -8,8 +8,10 @@
 <body>
     
 
-    22. Escribir un programa de JavaScript que al clickear un botón muestre un mensaje a
-elección.
+    <p>22. Escribir un programa de JavaScript que al clickear un botón muestre un mensaje a
+elección.</p>
+
+<input id="pinchable" type="button" value="Hacer click"/>
 
     <script src="script.js" type="text/javascript"></script>
 </body>
