--- a/Guia18Ej23/index.html
+++ b/Guia18Ej23/index.html
@@ -10,6 +10,8 @@
     23. Resalte todas las palabras de más de 8 caracteres en el texto del párrafo (con un fondo
 amarillo, por ejemplo)
 
+<p id="pintado">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti deserunt voluptas laudantium nemo consequatur, quam dolorum alias quas! Minima dolorem iste magnam pariatur numquam aliquid nemo quam eos hic delectus odio, sunt molestias laboriosam facere distinctio praesentium cumque at reprehenderit culpa, sed inventore. Exercitationem animi distinctio molestiae, cupiditate ex quas sint magni repellat ratione illo temporibus fugiat deserunt est, quibusdam aperiam labore architecto sed delectus deleniti, qui doloribus quae voluptates! Suscipit praesentium corrupti, earum molestias adipisci quasi quo veritatis voluptate? Error eligendi facilis totam amet accusamus in aut eaque quibusdam aspernatur, officia, eum asperiores possimus repudiandae quo ad laborum a.</p>
+
 
     <script src="script.js" type="text/javascript"></script>
 </body>
