--- a/Guia18Ej24/index.html
+++ b/Guia18Ej24/index.html
@@ -10,6 +10,13 @@
     24. Escribir un programa de JavaScript que a través de un formulario calcule el radio de un
 circulo y lo muestre en el HTML.
 
+    <h1>Calculadora de Radio de Círculo</h1>
+    <form id="circuloForm">
+        <label for="diametro">Ingresa el diámetro del círculo:</label>
+        <input type="number" id="diametro" name="diametro" step="any" required>
+        <button type="submit">Calcular Radio</button>
+    </form>
+    <p id="resultado"></p>
 
     <script src="script.js" type="text/javascript"></script>
 </body>
