--- a/Guia18Ej25/index.html
+++ b/Guia18Ej25/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<html><head>
+<meta charset=utf-8 />
+<title>Obtener nombre y apellido de form </title>
+<link rel="stylesheet" href="">
 </head>
 <body>
 
-    Escriba una función de JavaScript para obtener los valores de Nombre y Apellido del
-siguiente formulario.
-
 <form id="form1" onsubmit="getFormValores()">
-Nombre: <input type="text" name="nombre" value="David"><br>
-Apellido: <input type="text" name="apellido" value="Beckham"><br>
+
+Nombre: <input type="text" name="nombre" value="David">
+<br>
+Apellido: <input type="text" name="apellido" value="Beckham">
+<br>
 <input type="submit" value="Submit">
 </form>
 
+<div id="resultado"></div>
 
-    <script src="script.js" type="text/javascript"></script>
+<script src="script.js" type="text/javascript"></script>
 </body>
 </html>
