--- a/Guia18Ej01/index.html
+++ b/Guia18Ej01/index.html
@@ -18,9 +18,10 @@ indique “El día de hoy está ...”, completando el mensaje con el dato que i
     <input class="btn-submit" type="submit" value="Enviar"/>
 </form>
 
-<div id="respuestaClima">
-    <p>Aqui aparecerá la respuesta</p>
+<div>
+    <p>Respuesta:</p>
 </div>
+<div id="respuestaClima" class="return"></div>
 
 
 <hr>
