--- a/Guia18Ej25/index.html
+++ b/Guia18Ej25/index.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 
-<form id="form1" onsubmit="getFormValores()">
+<form id="form1" form>>
 
 Nombre: <input type="text" name="nombre" value="David">
 <br>
 Apellido: <input type="text" name="apellido" value="Beckham">
 <br>
-<input type="submit" value="Submit">
+<input type="submit" value="submit">
 </form>
 
 <div id="resultado"></div>
@@ -20,3 +20,6 @@ Apellido: <input type="text" name="apellido" value="Beckham">
 <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
+
+<!-- onsubmit="getFormValores()" -->
+
